--- a/dashboard.html
+++ b/dashboard.html
@@ -29,10 +29,27 @@
                 <span id="cartCount"
                     style="background: #e53e3e; color: white; border-radius: 50%; padding: 2px 6px; font-size: 0.7rem; position: absolute; top: -8px; right: -8px; display: none;">0</span>
             </button>
-            <button onclick="logout()"
-                style="background: none; border: none; color: #f44336; cursor: pointer; font-weight: 600;">
-                <i class="fas fa-sign-out-alt"></i> Logout
-            </button>
+            <div style="position: relative; display: inline-block; margin-left: 15px;">
+                <button onclick="toggleAccountMenu()"
+                    style="background: none; border: none; color: #555; cursor: pointer; font-weight: 600;">
+                    <i class="fas fa-user-circle"></i> Account
+                </button>
+                <div id="accountDropdown"
+                    style="display: none; position: absolute; right: 0; top: 100%; background-color: white; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1); z-index: 101; border-radius: 8px; overflow: hidden; margin-top: 10px;">
+                    <a href="#" onclick="openProfileModal(); toggleAccountMenu()"
+                        style="color: #333; padding: 12px 16px; text-decoration: none; display: block; border-bottom: 1px solid #eee; transition: background 0.2s;"
+                        onmouseover="this.style.background='#f5f5f5'" onmouseout="this.style.background='white'">Edit
+                        your Profile</a>
+                    <a href="#" onclick="showSection('orders'); toggleAccountMenu()"
+                        style="color: #333; padding: 12px 16px; text-decoration: none; display: block; border-bottom: 1px solid #eee; transition: background 0.2s;"
+                        onmouseover="this.style.background='#f5f5f5'"
+                        onmouseout="this.style.background='white'">Order</a>
+                    <a href="#" onclick="logout()"
+                        style="color: #f44336; padding: 12px 16px; text-decoration: none; display: block; transition: background 0.2s;"
+                        onmouseover="this.style.background='#ffebee'"
+                        onmouseout="this.style.background='white'">Logout</a>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -103,6 +120,45 @@
                         </button>
                         <h3>Pickup Address</h3>
                         <div class="form-group">
+                            <label>Full Name</label>
+                            <input type="text" id="contactName" placeholder="Enter Full Name" required>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label>Phone Number</label>
+                                <div
+                                    style="display: flex; align-items: center; border: 1px solid #ddd; border-radius: 4px; background: #fff;">
+                                    <span
+                                        style="padding: 10px; background: #eee; color: #555; border-right: 1px solid #ddd;">+91</span>
+                                    <input type="tel" id="contactPhone" placeholder="9876543210" required
+                                        style="border: none; outline: none; flex: 1; padding: 10px;">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label>Alt. Phone (Optional)</label>
+                                <div
+                                    style="display: flex; align-items: center; border: 1px solid #ddd; border-radius: 4px; background: #fff;">
+                                    <span
+                                        style="padding: 10px; background: #eee; color: #555; border-right: 1px solid #ddd;">+91</span>
+                                    <input type="tel" id="contactAltPhone" placeholder="9876543210"
+                                        style="border: none; outline: none; flex: 1; padding: 10px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Address Type</label>
+                            <div style="display: flex; gap: 20px; margin-top: 5px;">
+                                <label
+                                    style="display: flex; align-items: center; gap: 5px; cursor: pointer; font-weight: normal;">
+                                    <input type="radio" name="addressType" value="Home" checked> Home
+                                </label>
+                                <label
+                                    style="display: flex; align-items: center; gap: 5px; cursor: pointer; font-weight: normal;">
+                                    <input type="radio" name="addressType" value="Work"> Work
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label>Address Line 1</label>
                             <input type="text" id="addressLine1" placeholder="House No, Building Name" required>
                         </div>
@@ -136,15 +192,38 @@
                                 </select>
                             </div>
                         </div>
+
+                        <button id="saveAddressBtn" class="submit-btn" onclick="saveAddressAndShowSelection()">Add
+                            Pickup Address</button>
+                    </div>
+
+                    <!-- Step 3: Select Address -->
+                    <div id="sell-step-3" style="display: none;">
+                        <button onclick="backToCalc()"
+                            style="background: none; border: none; color: #666; cursor: pointer; margin-bottom: 15px;">
+                            <i class="fas fa-arrow-left"></i> Back
+                        </button>
+                        <h3>Select Pickup Address</h3>
+                        <div id="addressList" style="margin-bottom: 20px;">
+                            <!-- Addresses injected by JS -->
+                        </div>
+                        <button class="btn btn-secondary" onclick="showAddAddressForm()"
+                            style="width: 100%; margin-bottom: 20px; border: 1px dashed #2e7d32; color: #2e7d32; background: #f9fff9;">
+                            <i class="fas fa-plus"></i> Add New Address
+                        </button>
                         <div class="form-group">
                             <label>Pickup Date</label>
-                            <input type="date" id="pickupDate">
+                            <input type="date" id="pickupDate"
+                                onchange="document.getElementById('dateError').style.display='none'">
+                            <div id="dateError"
+                                style="color: #f44336; font-size: 0.9rem; display: none; margin-top: 5px; animation: fadeIn 0.3s ease;">
+                                Please select a pickup date.</div>
                         </div>
                         <button class="submit-btn" onclick="placeScrapOrder()">Place Pickup Order</button>
                     </div>
 
-                    <!-- Step 3: Success -->
-                    <div id="sell-step-3" style="display: none; text-align: center; padding: 40px;">
+                    <!-- Step 4: Success -->
+                    <div id="sell-step-4" style="display: none; text-align: center; padding: 40px;">
                         <i class="fas fa-check-circle"
                             style="font-size: 4rem; color: #56ab2f; margin-bottom: 20px;"></i>
                         <h3>Order Placed!</h3>
@@ -156,33 +235,65 @@
             </div>
 
             <!-- SECTION: WALLET -->
+            <!-- SECTION: WALLET -->
             <div id="section-wallet" class="content-section" style="display: none;">
-                <div class="card wallet-card" style="text-align: center; padding: 40px; margin-bottom: 30px;">
-                    <i class="fas fa-wallet" style="font-size: 3rem; opacity: 0.8;"></i>
-                    <p style="color: white; margin-top: 10px; font-weight: 500;">Current Balance</p>
-                    <div class="wallet-balance">₹<span id="walletDisplay">0</span></div>
-                    <button class="btn btn-secondary"
-                        onclick="alert('Withdraw feature coming soon to your bank!')">Withdraw to Bank</button>
+                <button onclick="showSection('sell')"
+                    style="background: none; border: none; color: #666; cursor: pointer; margin-bottom: 20px; display: flex; align-items: center; gap: 8px; font-size: 1rem; padding: 0;">
+                    <i class="fas fa-arrow-left"></i> Back
+                </button>
+
+                <h2 style="margin-bottom: 20px; color: #333;">My Wallet</h2>
+
+                <div class="wallet-card"
+                    style="background: linear-gradient(135deg, #2e7d32, #66bb6a); padding: 30px; border-radius: 20px; color: white; margin-bottom: 30px; box-shadow: 0 10px 20px rgba(46, 125, 50, 0.2);">
+                    <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                        <div>
+                            <p style="margin: 0; opacity: 0.9; font-size: 0.9rem;">Total Balance</p>
+                            <div style="font-size: 2.5rem; font-weight: 700; margin: 10px 0;">₹<span
+                                    id="walletDisplay">0</span></div>
+                        </div>
+                        <div
+                            style="background: rgba(255,255,255,0.2); width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-wallet" style="font-size: 1.5rem;"></i>
+                        </div>
+                    </div>
+                    <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
+                        <button onclick="alert('Withdraw feature coming soon!')"
+                            style="background: white; color: #2e7d32; border: none; padding: 10px 20px; border-radius: 30px; font-weight: 600; cursor: pointer; display: inline-flex; align-items: center; gap: 8px; transition: transform 0.2s;"
+                            onmouseover="this.style.transform='translateY(-2px)'"
+                            onmouseout="this.style.transform='translateY(0)'">
+                            <i class="fas fa-paper-plane"></i> Withdraw
+                        </button>
+                    </div>
                 </div>
 
-                <div class="card">
-                    <h3>Transaction History</h3>
-                    <div id="transactionList" style="margin-top: 20px; color: #666;">
-                        <p>No transactions yet.</p>
+                <div>
+                    <h3 style="color: #444; margin-bottom: 15px;">Recent Transactions</h3>
+                    <div id="transactionList" style="display: flex; flex-direction: column; gap: 15px;">
+                        <!-- Injected by JS -->
                     </div>
                 </div>
             </div>
 
             <!-- SECTION: MARKETPLACE -->
             <div id="section-market" class="content-section" style="display: none;">
+                <button onclick="showSection('sell')"
+                    style="background: none; border: none; color: #666; cursor: pointer; margin-bottom: 20px; display: flex; align-items: center; gap: 8px; font-size: 1rem; padding: 0;">
+                    <i class="fas fa-arrow-left"></i> Back
+                </button>
                 <h2 style="margin-bottom: 20px; color: #333;">Recycled Marketplace</h2>
-                <div class="product-grid" id="marketplaceGrid">
+                <div class="product-grid" id="marketplaceGrid"
+                    style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px;">
                     <!-- Products injected by JS -->
                 </div>
             </div>
 
             <!-- SECTION: ORDERS -->
             <div id="section-orders" class="content-section" style="display: none;">
+                <button onclick="showSection('sell')"
+                    style="background: none; border: none; color: #666; cursor: pointer; margin-bottom: 10px; display: flex; align-items: center; gap: 8px; font-size: 1rem; padding: 0;">
+                    <i class="fas fa-arrow-left"></i> Back
+                </button>
                 <h2 style="margin-bottom: 20px; color: #333;">My Orders</h2>
                 <div id="ordersList" style="display: grid; gap: 15px;">
                     <!-- Orders injected by JS -->
@@ -225,6 +336,48 @@
         </div>
     </div>
 
+    <!-- Order Detail Modal -->
+    <div id="orderDetailModal" class="modal">
+        <div class="modal-content" style="max-width: 500px;">
+            <span class="close" onclick="closeOrderModal()">&times;</span>
+            <h3 style="color: #2e7d32; margin-bottom: 20px; border-bottom: 1px solid #eee; padding-bottom: 10px;">Order
+                Details</h3>
+            <div id="orderDetailContent" style="color: #444; line-height: 1.6;">
+                <!-- Details injected by JS -->
+            </div>
+            <div style="margin-top: 20px; text-align: right;">
+                <button class="btn btn-secondary" onclick="closeOrderModal()">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div id="deleteModal" class="modal">
+        <div class="modal-content" style="max-width: 400px; text-align: center;">
+            <span class="close" onclick="closeDeleteModal()">&times;</span>
+            <div style="margin-bottom: 15px;">
+                <i class="fas fa-exclamation-circle" style="font-size: 3rem; color: #ff9800;"></i>
+            </div>
+            <h3 style="color: #333; margin-bottom: 10px;">Delete Address?</h3>
+            <p style="color: #666; margin-bottom: 20px;">Are you sure you want to remove this address? This action
+                cannot be undone.</p>
+            <div style="display: flex; gap: 10px; justify-content: center;">
+                <button onclick="closeDeleteModal()"
+                    style="padding: 10px 20px; border: 1px solid #ddd; background: white; border-radius: 5px; cursor: pointer;">Cancel</button>
+                <button onclick="confirmDeleteAddress()"
+                    style="padding: 10px 20px; border: none; background: #f44336; color: white; border-radius: 5px; cursor: pointer;">Delete</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script>
+        firebase.initializeApp(firebaseConfig);
+    </script>
     <script src="script.js"></script>
     <script>
         // Init dashboard
